# unified-ai-agent

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  main.py
src/uniaiagent/: __init__.py  config.py
src/uniaiagent/api/: __init__.py
src/uniaiagent/api/middleware/: __init__.py  auth.py  validation.py
src/uniaiagent/api/routes/: __init__.py  claude.py  health.py  openai.py  process.py
src/uniaiagent/core/: __init__.py  claude_executor.py  file_processor.py  health_checker.py  session_manager.py  stream_processor.py
src/uniaiagent/exceptions/: __init__.py  custom_errors.py  handlers.py  types.py
src/uniaiagent/models/: __init__.py  types.py
src/uniaiagent/services/: __init__.py  logger.py  openai_transformer.py
tests/: __init__.py  api_request_test.py  conftest.py  test_api_health.py  test_functional_comparison.py
